# readme-fetch

./: Cargo.toml  action.yml
.github/workflows/: test.yml
src/: main.rs  sources.rs  template.tera
