[package]
name = "readme-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
tera = "1.20.1"
chrono = "0.4.42"
date-differencer = "0.1.3"
octocrab = "0.48.0"
serde_json = "1.0.145"

[dependencies.tokio]
version = "1.48.0"
features = ["full"]

[dependencies.clap]
version = "4.5.53"
features = ["derive"]
